--- a/config_sample.env
+++ b/config_sample.env
@@ -1,28 +1,25 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "1781664513:AAEr8RKTwvzBqnfP_2hUruXn4Gt_mgYsOcM"
+GDRIVE_FOLDER_ID = "1H04w040ErbKDVcvX-O77xkglx7OB3eqg"
+OWNER_ID = 548699498
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 6134343
+TELEGRAM_HASH = "344493a60221b6483e47b00ff1461708"
 # OPTIONAL CONFIG
-DATABASE_URL = ""
+DATABASE_URL = "postgres://mdpqfyol:qyItiT1Fw3Q_0ctelj_McbBi9EKQq32s@satao.db.elephantsql.com/mdpqfyol"
 AUTHORIZED_CHATS = ""  # Split by space
 SUDO_USERS = ""  # Split by space
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://darkdrive.saqibpiash.workers.dev/4:/Drive%20Mirror"
 STATUS_LIMIT = ""  # Recommend limit status to 4 tasks
 UPTOBOX_TOKEN = ""
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "7gBynTwJ"
+MEGA_EMAIL_ID = "piash@maildrop.cc"
+MEGA_PASSWORD = "Piash01761"
 BLOCK_MEGA_FOLDER = "" 
 BLOCK_MEGA_LINKS = ""
 STOP_DUPLICATE = ""
@@ -46,12 +43,12 @@ HEROKU_API_KEY = ""
 HEROKU_APP_NAME = ""
 # View Link button to open file Index Link in browser instead of direct download link
 # You can figure out if it's compatible with your Index code or not, open any video from you Index and check if the END of link from browser link bar is ?a=view, if yes make it "True" it will work (Compatible with Bhadoo Index Code)
-VIEW_LINK = ""
+VIEW_LINK = "True"
 # Add more buttons (Three buttons are already added of Drive Link, Index Link, and View Link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
-BUTTON_FOUR_NAME = ""
-BUTTON_FOUR_URL = ""
-BUTTON_FIVE_NAME = ""
-BUTTON_FIVE_URL = ""
-BUTTON_SIX_NAME = ""
-BUTTON_SIX_URL = ""
+BUTTON_FOUR_NAME = "Official Youtube Channel"
+BUTTON_FOUR_URL = "https://www.youtube.com/channel/UCPPzJyryKs5e34NB3S8O0IA?sub_confirmation=1"
+BUTTON_FIVE_NAME = "Support Group"
+BUTTON_FIVE_URL = "https://t.me/TechTubeInsiderGroup"
+BUTTON_SIX_NAME = "Support Channel"
+BUTTON_SIX_URL = "https://t.me/TechTubeInsider"
